--- a/tutorial_TeX/RB_PhyloComparative_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_PhyloComparative_Tutorial/refs.bib
@@ -76,6 +76,20 @@
   Timestamp                = {2015.01.20}
 }
 
+@Article{Huelsenbeck2003,
+  Title                    = {Detecting correlation between characters in a comparative analysis with uncertain phylogeny},
+  Author                   = {Huelsenbeck, John P and Rannala, Bruce},
+  Journal                  = EVOLUTION,
+  Year                     = {2003},
+  Number                   = {6},
+  Pages                    = {1237--1247},
+  Volume                   = {57},
+
+  Owner                    = {hoehna},
+  Publisher                = {Wiley Online Library},
+  Timestamp                = {2015.01.22}
+}
+
 @Article{Lartillot2013,
   Title                    = {Interaction between selection and biased gene conversion in mammalian protein-coding sequence evolution revealed by a phylogenetic covariance analysis},
   Author                   = {Lartillot, Nicolas},
