--- a/tutorial_TeX/RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial.tex
+++ b/tutorial_TeX/RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial.tex
@@ -6,12 +6,14 @@
 \headsep = 20pt
 \lhead{ }
 \rhead{\textsc {\RevBayes~Tutorial --- Comparative Method}}
-\author{Nicolas Lartillot}
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Phylogenies and the comparative method}}\\\vspace{2mm}
+\vspace{1cm}
+{\Large Nicolas Lartillot and Sebastian H{\"o}hna}
+\vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
