--- a/tutorial_TeX/RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial.tex
+++ b/tutorial_TeX/RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial.tex
@@ -5,30 +5,24 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {RevBayes Tutorial --- Simple Birth-Death Process Models}}
-
+\rhead{\textsc {\RevBayes~Tutorial --- Simple Birth-Death Process Models}}
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Phylogenetic Inference using RevBayes}\\\vspace{2mm}
+\textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Simple Birth-Death Process Models}}\\\vspace{2mm}
+\vspace{1cm}
+{\Large Tracy A. Heath}
+\vspace{1cm}
+
+
 \end{center}
 
+\def \ResourcePath {./}
+\def \GlobalResourcePath {../}
 \input{RB_SimpleDiversification_Tutorial_content}
 
-\href{http://creativecommons.org/licenses/by/4.0/}{\includegraphics[scale=0.8]{../shared_figures/ccby.eps}} This tutorial was written by \href{http://phyloworks.org/}{Tracy Heath}, \href{http://www.bsse.ethz.ch/cevo}{Tanja Stadler}, and Sebastian H\"{o}hna; licensed under a \href{http://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}. 
-
-
-
 Version dated: \today
-
-%\newpage
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%  REFERENCES  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\printbibliography[heading=relevref]
 
 
 \end{document}
